2013-10-31 Added 2 commands setClickDisabled and setClickEnabled to Image Viewer addon
2013-10-29 Fixed issue with precision in Plot addon
2013-10-25 Fixed problem with restoring gap states
2013-10-24 Fixed problem with Text Selection containg LaTeX with additional spaces
2013-10-23 Fixed tests in Single State Button
2013-10-23 Added 2 commands markAsCorrect and markAsWrong to Image Viewer addon
2013-10-22 Fixed problem with LaTeX in Text Selection addon
2013-10-21 Added displayName for addons' properties
2013-10-21 Added saving in state if addon Graph is started
2013-10-21 Fixed problem with gaps in Text module
2013-10-16 Clear event bus when closing popup
2013-10-16 Added CSS3 animation to navigation arrows
2013-10-15 Fixed problem with counting errors in Custom Scoring
2013-10-14 Fixed bug with hover effect on mobile devices in Choice and Image Source modules
2013-10-14 Fixed problem with multiple parentheses in latex code
2013-10-14 Fixed bug with limited errors in Custom Scoring
2013-10-09 Fixed True/False and Table not loading properly due to bug 'c.find is undefined'
2013-10-09 Fixed Glossary links on feedback when div.ic_page had more then one class
2013-10-09 Fixed bug with calculating graph max score when activity was not started
2013-10-09 Fixed bug with hover effect on mobile devices in Double State Button
2013-10-09 Fixed bug with black background on IE 10 in Multiplegap addon
2013-10-08 Fixed problem with definition event in book mode
2013-10-08 event bug on safari in Video addon fixed
2013-10-07 Fixed problem with next page in book mode while presentation contains 2 pages only
2013-10-07 event bug in addons Graph and Single State Button fixed
2013-10-07 Added getView function for modules
2013-10-06 Changed navigation arrows default styling.
2013-10-04 Fixed bug in event propagation in Double State Button
2013-10-04 Removed user-select property from Drawing module styles, which was causing inability to select property value in Editor