@@ -1,3 +1,4 @@
+2013-11-05 Fixed issue with Double State Button on mLibro Android application
 2013-10-31 Added 2 commands setClickDisabled and setClickEnabled to Image Viewer addon
 2013-10-29 Fixed issue with precision in Plot addon
 2013-10-25 Fixed problem with restoring gap states
